[build-system]
requires = ["setuptools>=61.0"]
build-backend = setuptools.build_meta

[project]
name = "ai_toolkit"
version = "0.0.1"
authors = [{ name="tianqizhizimiao" }]
description = "AI Toolkit for MCP server and local function call"
long_description = file: README.md
long_description-content-type = text/markdown
requires-python = ">=3.8"
dependencies = [
    "flask",
    "requests"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]